--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,23 +4,24 @@ default_language_version:
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.4.8
-    stages:
-      - pre-commit
     hooks:
       - id: ruff # Run the linter.
+        stages: [ pre-commit ]
 
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 24.4.2
     hooks:
         - id: black
+          stages: [ pre-commit ]
 
   -   repo: https://github.com/pre-commit/mirrors-mypy
       rev: v1.10.0
       hooks:
       -   id: mypy
+          stages: [ pre-commit ]
 
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: master
+    rev: v3.27.0
     hooks:
       - id: commitizen
         stages: [ commit-msg ]
@@ -28,7 +29,7 @@ repos:
         stages: [ pre-push ]
 
   - repo: https://github.com/PyCQA/bandit
-    rev: v1.7.9
+    rev: 1.7.9
     hooks:
       - id: bandit
         stages: [ pre-push ]
