--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -37,7 +40,7 @@ jobs:
         run: |
           pip install toml
           VERSION=$(python -c "import toml; print(toml.load('pyproject.toml')['tool']['poetry']['version'])")
-          docker pull my-fastapi-app:$VERSION  # Pull the Docker image from your registry or local cache
+          docker pull my-fastapi-app:$VERSION
 
       - name: Code Quality Check
         run: |
@@ -69,7 +72,7 @@ jobs:
         run: |
           pip install toml
           VERSION=$(python -c "import toml; print(toml.load('pyproject.toml')['tool']['poetry']['version'])")
-          docker pull my-fastapi-app:$VERSION  # Pull the Docker image from your registry or local cache
+          docker pull my-fastapi-app:$VERSION 
 
       - name: Run tests
         run: |
