--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.12"
 fastapi = "^0.111.0"
 uvicorn = "^0.30.1"
 pytest = "^8.2.2"
+pydantic-settings = "^2.3.3"
+gunicorn = "^22.0.0"
+uvicorn-worker = "^0.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
