--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic-settings = "^2.3.3"
 gunicorn = "^22.0.0"
 uvicorn-worker = "^0.2.0"
 prometheus-fastapi-instrumentator = "^7.0.0"
+sentry-sdk = "^2.5.1"
 
 
 [tool.poetry.group.dev.dependencies]
