Feature/add presentation layer (#2)
* feat: add version to project setting

* feat: add docs routes and endpoints

- add swagger_ui_html
- add swagger_ui_redirect
- add redoc_html

* feat: add healthcheck route

* feat: add main router of project

* feat: add event registers

- setup_prometheus event
- register_startup_event event
- register_shutdown_event event

* feat: add event shutdown/startup events and main rout to main app

* build: add prometheus-fastapi-instrumentator package

* build: install sentry sdk

* feat: add sentry integration to project

* feat: add method to handle multiprocess for prometheus-client

* fix: the CUSTOM_LOG_LEVEL should be in quote

* feat: add route for static file because swagger and redoc needs it

* ref: replace the on_event with lifespan

* ref: change the name of metric endpoint

* fix: add static directory

* test: fix the response of health check

* test: change the health check endpoint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pytest = "^8.2.2"
 pydantic-settings = "^2.3.3"
 gunicorn = "^22.0.0"
 uvicorn-worker = "^0.2.0"
+prometheus-fastapi-instrumentator = "^7.0.0"
+sentry-sdk = "^2.5.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -112,8 +114,10 @@ exclude = '''
 
 [tool.mypy]
 python_version = "3.12"
-warn_return_any = true
+warn_return_any = false
 warn_unused_configs = true
+pretty = true
+allow_untyped_decorators = true
 exclude = ["app/tests"]
 
 [tool.commitizen]
