--- a/.env.sample
+++ b/.env.sample
@@ -4,4 +4,8 @@ CUSTOM_WORKERS_COUNT=1
 CUSTOM_RELOAD=true
 CUSTOM_ENVIRONMENT=development# Possible values: development, production, staging
 CUSTOM_LOG_LEVEL='DEBUG'# Possible values: DEBUG, INFO, WARNING, ERROR, FATAL
-
+CUSTOM_ALLOWED_HOSTS='["localhost", "0.0.0.0"]'
+CUSTOM_ALLOW_ORIGINS='["*"]'
+CUSTOM_ALLOW_METHODS='["*"]'
+CUSTOM_ALLOW_HEADERS='["*"]'
+CUSTOM_ALLOW_CREDENTIALS=false
