--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ gunicorn = "^22.0.0"
 uvicorn-worker = "^0.2.0"
 prometheus-fastapi-instrumentator = "^7.0.0"
 sentry-sdk = "^2.5.1"
+fastapi-utils = "^0.7.0"
+typing-inspect = "^0.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
