--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ prometheus-fastapi-instrumentator = "^7.0.0"
 sentry-sdk = "^2.5.1"
 fastapi-utils = "^0.7.0"
 typing-inspect = "^0.9.0"
+sqlalchemy = "^2.0.31"
+psycopg = {extras = ["binary"], version = "^3.1.19"}
 
 
 [tool.poetry.group.dev.dependencies]
