--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,4 @@ CUSTOM_ALLOW_ORIGINS='["*"]'
 CUSTOM_ALLOW_METHODS='["*"]'
 CUSTOM_ALLOW_HEADERS='["*"]'
 CUSTOM_ALLOW_CREDENTIALS=false
+POSTGRES_DB_DSN='postgresql+psycopg:postgres@localhost:5432/dummy'
