--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ fastapi-utils = "^0.7.0"
 typing-inspect = "^0.9.0"
 sqlalchemy = "^2.0.31"
 psycopg = {extras = ["binary"], version = "^3.1.19"}
+factory-boy = "^3.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
