ref: set the prefix for .env variables to empty string

--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,12 @@
-CUSTOM_HOST=localhost
-CUSTOM_PORT=8000
-CUSTOM_WORKERS_COUNT=1
-CUSTOM_RELOAD=true
-CUSTOM_ENVIRONMENT=development# Possible values: development, production, staging
-CUSTOM_LOG_LEVEL='DEBUG'# Possible values: DEBUG, INFO, WARNING, ERROR, FATAL
-CUSTOM_ALLOWED_HOSTS='["localhost", "0.0.0.0"]'
-CUSTOM_ALLOW_ORIGINS='["*"]'
-CUSTOM_ALLOW_METHODS='["*"]'
-CUSTOM_ALLOW_HEADERS='["*"]'
-CUSTOM_ALLOW_CREDENTIALS=false
-CUSTOM_POSTGRES_DSN='postgresql+psycopg://postgres:postgres@localhost:5432/dummy'
+HOST=localhost
+PORT=8000
+WORKERS_COUNT=1
+RELOAD=true
+ENVIRONMENT=development# Possible values: development, production, staging
+LOG_LEVEL='DEBUG'# Possible values: DEBUG, INFO, WARNING, ERROR, FATAL
+ALLOWED_HOSTS='["*"]'
+ALLOW_ORIGINS='["*"]'
+ALLOW_METHODS='["*"]'
+ALLOW_HEADERS='["*"]'
+ALLOW_CREDENTIALS=false
+POSTGRES_DSN='postgresql+psycopg://postgres:postgres@postgres:5432/dummy'
