--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,29 @@
 version: "3.9"
 
 services:
-  redis:
-    image: redis:7.0.9-alpine
-    container_name: redis
-    shm_size: 256mb
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
     healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:8000/health" ]
       interval: 30s
-      timeout: 10s
+      timeout: 1s
       retries: 3
-      start_period: 20s
+      start_period: 5s
+    env_file:
+      - .env
     ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - default
-
-  clickhouse:
-    image: clickhouse/clickhouse-server:23.8-alpine
-    container_name: clickhouse
-    shm_size: 256mb
-    restart: always
-    healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://localhost:8123/ping || exit 1" ]
-      interval: 1m
-      timeout: 10s
-      retries: 3
-      start_period: 30s
-    ports:
-      - "8123:8123"
-      - "9000:9000"
-    volumes:
-      - clickhouse_data:/var/lib/clickhouse
-    networks:
-      - default
+      - "8000:8000"
+    depends_on:
+      psql:
+        condition: service_healthy
+    command: [ "/bin/sh", "-c", "poetry run python main.py" ]
 
   psql:
     image: postgres:16.3-alpine3.19
+    hostname: postgres
     container_name: postgres
     restart: always
     healthcheck:
@@ -57,8 +41,43 @@ services:
       - POSTGRES_DB=postgres
     volumes:
       - psql_data:/var/lib/postgresql/data/
-    networks:
-      - default
+
+
+  redis:
+    image: redis:7.0.9-alpine
+    container_name: redis
+    shm_size: 256mb
+    restart: always
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+
+  clickhouse:
+    image: clickhouse/clickhouse-server:23.8-alpine
+    container_name: clickhouse
+    shm_size: 256mb
+    restart: always
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:8123/ping || exit 1" ]
+      interval: 1m
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    ports:
+      - "8123:8123"
+      - "9000:9000"
+    volumes:
+      - clickhouse_data:/var/lib/clickhouse
+
+
 
   kafka:
     image: 'bitnami/kafka:3.3.1'
@@ -84,8 +103,7 @@ services:
       - "9093:9093"
     volumes:
       - kafka_data:/bitnami/kafka
-    networks:
-      - default
+
 
   kafka-ui:
     container_name: kafka-ui
@@ -105,15 +123,10 @@ services:
     environment:
       - KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS=kafka:9092
       - KAFKA_CLUSTERS_0_NAME=r4zt_wrqTRuT7W2NJsB_GA
-    networks:
-      - default
+
 
 volumes:
   redis_data:
   clickhouse_data:
   psql_data:
   kafka_data:
-
-networks:
-  default:
-    driver: bridge
