--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.111.0"
 uvicorn = "^0.30.1"
-pytest = "^8.2.2"
 pydantic-settings = "^2.3.3"
 gunicorn = "^22.0.0"
 uvicorn-worker = "^0.2.0"
@@ -20,6 +19,8 @@ typing-inspect = "^0.9.0"
 sqlalchemy = "^2.0.31"
 psycopg = {extras = ["binary"], version = "^3.1.19"}
 factory-boy = "^3.3.0"
+pytest = "^8.2.2"
+pytest-cov = "^5.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
