--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ psycopg = {extras = ["binary"], version = "^3.1.19"}
 factory-boy = "^3.3.0"
 pytest = "^8.2.2"
 pytest-cov = "^5.0.0"
+loguru = "^0.7.2"
 
 
 [tool.poetry.group.dev.dependencies]
