--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ factory-boy = "^3.3.0"
 pytest = "^8.2.2"
 pytest-cov = "^5.0.0"
 loguru = "^0.7.2"
+slowapi = "^0.1.9"
+redis = "^5.0.6"
 
 
 [tool.poetry.group.dev.dependencies]
